--- a/app/index.html
+++ b/app/index.html
@@ -136,7 +136,7 @@ header -->
 		<div class="table">
 			<div class="tr">
 				<div class="td">
-					<h1>Бесплатно проконсультируйтесь перед продвижением сайта</h1>
+					<h1>Подробности продвижения сайта</h1>
 					<form id="seo_consultation" method="POST">
 
 						<!-- Hidden Required Fields -->
@@ -172,29 +172,56 @@ header -->
 		<h2>Результаты продвижения</h2>
 		<div class="row">
 			<div class="col-md-4">
-				<h3>Схема Сервис</h3>
-				<div>Ремонт телефонов</div>
-				<div><a href="#">shema-servis.ru</a></div>
-				<div id="chart_div_0"></div>
+				<div class="result_seo">
+					<span>
+						<img src="img/favicon_shema-servis.png" alt="favicon shema servis">
+						<h3>Схема Сервис</h3>
+					</span>
+					<div>Ремонт телефонов</div>
+					<div><a href="#">shema-servis.ru</a></div>
+					<div id="chart_div_0"></div>
+					<div id="chart_div_0_1"></div>
+					<div>
+						<div>Итоги:</div>
+						<p>Прирост поситителей сайта, составил <span>79,3%</span>.</p>
+						<p>Компания была перегружена от большого потока новых клиентов, но в целом справилась.</p>
+					</div>
+				</div>
 			</div>
 			<div class="col-md-4">
-				<h3>Сладкие идеи</h3>
-				<div>Торты на заказ</div>
-				<div><a href="#">the-sweet.ru</a></div>
-				<div id="chart_div_1"></div>
+				<div class="result_seo">
+					<span>
+						<img src="img/favicon_the_sweet.png" alt="favicon the sweet">
+						<h3>Сладкие идеи</h3>
+					</span>
+					<div>Торты на заказ</div>
+					<div><a href="#">the-sweet.ru</a></div>
+					<div id="chart_div_1"></div>
+					<div id="chart_div_1_1"></div>
+					<div>
+						<div>Итоги:</div>
+						<p>Прирост поситителей сайта, составил <span>94,2%</span>.</p>
+						<p>Охват 100% целевой аудитории города, был достигнут через 4 месяца продвижения сайта.</p>
+					</div>
+				</div>
 			</div>
 			<div class="col-md-4">
-				<h3>ООО АгроКолёса Белогорья</h3>
-				<div>Колеса для сель-хоз. техники</div>
-				<div><a href="#">agro-wheel.ru</a></div>
-				<div id="chart_div_2"></div>
+				<div class="result_seo">
+					<span>
+						<img src="img/favicon_agro_wheel.png" width="16" height="auto" alt="favicon agro wheel">
+						<h3>ООО АгроКолёса Белогорья</h3>
+					</span>
+					<div>Колеса для сель-хоз. техники</div>
+					<div><a href="#">agro-wheel.ru</a></div>
+					<div id="chart_div_2"></div>
+					<div id="chart_div_2_1"></div>
+					<div>
+						<div>Итоги:</div>
+						<p>Прирост поситителей сайта, составил <span>61,7%</span>.</p>
+						<p>Компания появилась в поисковой выдаче, во множестве городов Россиии, в том числе и Москве.</p>
+					</div>
+				</div>
 			</div>
-			<!-- <div class="col-md-4">
-				<h3>BlackSmith</h3>
-				<div>Кузнец-шоу</div>
-				<div><a href="#">the-blacksmith.ru</a></div>
-				<div id="chart_div_3"></div>
-			</div> -->
 		</div>
 
 	</div>
