--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,7 @@ header -->
 <section class="results" id="results">
 	<div class="container">
 		<h2>Результаты продвижения</h2>
+		<div class="h2_desc">Немного сухой статистики.</div class="h2_desc">
 		<div class="row">
 			<div class="col-md-4">
 				<div class="result_seo">
@@ -182,8 +183,8 @@ header -->
 					<div id="chart_div_0"></div>
 					<div id="chart_div_0_1"></div>
 					<div>
-						<div>Итоги:</div>
-						<p>Прирост поситителей сайта, составил <span>79,3%</span>.</p>
+						<div class="total">Итоги:</div>
+						<p>Прирост поситителей сайта, составил <span><b>79,3%</b></span>.</p>
 						<p>Компания была перегружена от большого потока новых клиентов, но в целом справилась.</p>
 					</div>
 				</div>
@@ -199,8 +200,8 @@ header -->
 					<div id="chart_div_1"></div>
 					<div id="chart_div_1_1"></div>
 					<div>
-						<div>Итоги:</div>
-						<p>Прирост поситителей сайта, составил <span>94,2%</span>.</p>
+						<div class="total">Итоги:</div>
+						<p>Прирост поситителей сайта, составил <span><b>94,2%</b></span>.</p>
 						<p>Охват 100% целевой аудитории города, был достигнут через 4 месяца продвижения сайта.</p>
 					</div>
 				</div>
@@ -216,9 +217,9 @@ header -->
 					<div id="chart_div_2"></div>
 					<div id="chart_div_2_1"></div>
 					<div>
-						<div>Итоги:</div>
-						<p>Прирост поситителей сайта, составил <span>61,7%</span>.</p>
-						<p>Компания появилась в поисковой выдаче, во множестве городов Россиии, в том числе и Москве.</p>
+						<div class="total">Итоги:</div>
+						<p>Прирост поситителей сайта, составил <span><b>61,7%</b></span>.</p>
+						<p>Компания появилась в поисковой выдаче, во множестве городов Россиии, в том числе в Москве.</p>
 					</div>
 				</div>
 			</div>
