--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,7 @@ top_mnu -->
 						<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Которое решила большой силуэт сбить эта, от всех, по всей то текст текста океана ее инициал скатился, меня возвращайся единственное встретил которой!</p>
 					</div>
 				</li>
+				<li><a href="#">Гарантии</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
 		</div>
@@ -269,6 +270,7 @@ mobile_menu -->
 					<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Которое решила большой силуэт сбить эта, от всех, по всей то текст текста океана ее инициал скатился, меня возвращайся единственное встретил которой!</p>
 				</div>
 			</li>
+			<li><a href="#">Гарантии</a></li>
 			<li><a href="#">Контакты</a></li>
 			<!-- <li class="Spacer" id="donate"></li> -->
 		</ul>
