--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	
 	<meta charset="utf-8">
 
 	<title>Landing2Top - Продвижение сайта. Белгород</title>
@@ -66,7 +68,7 @@ top_line -->
 				<li>
 					<a href="#" class="share hvr-icon-sink-away">Моё сообщество</a>
 					<div class="sf-mega">
-						<a target="_blank" href="https://vk.com/club113520320" class="vk hvr-sweep-to-right not_out_link">[ <i class="icon-vkontakte"></i> Группа ]</a>
+						<a target="_blank" href="https://vk.com/club113520320" class="vk not_out_link cl-effect-1"><i class="icon-vkontakte"></i></a>
 						<p>Держите руку на пульсе. Будьте в курсе новостей, задавайте вопросы и получайте ответы.</p>
 					</div>
 				</li>
@@ -100,11 +102,11 @@ top_mnu -->
 
 		<div class="sf_menu_wrap">
 			<ul class="sf-menu mnu">
-				<li class="active"><a href="#">Главная</a></li>
-				<li><a href="#results">Результаты</a></li>
-				<li><a href="#guarantees">Гарантии</a></li>
-				<li><a href="#services">Услуги</a></li>
-				<li><a href="#contacts">Контакты</a></li>
+				<li class="active"><a class="cl-effect-1" href="#">Главная</a></li>
+				<li><a class="cl-effect-1" href="#results">Результаты</a></li>
+				<li><a class="cl-effect-1" href="#guarantees">Гарантии</a></li>
+				<li><a class="cl-effect-1" href="#services">Услуги</a></li>
+				<li><a class="cl-effect-1" href="#contacts">Контакты</a></li>
 			</ul>
 		</div>
 
@@ -137,7 +139,8 @@ header -->
 		<div class="table">
 			<div class="tr">
 				<div class="td">
-					<h1 class=".flash">Продвижение <span>сайтов</span></h1>
+					<h1 class="tlt"><span>Продвижение </span><span class="span">сайтов</span></h1>
+					<div class="desc tlt"><span>Мои клиенты уже оценили это на деле.</span></div>
 					<form id="seo_consultation" method="POST">
 
 						<!-- Hidden Required Fields -->
@@ -147,26 +150,51 @@ header -->
 						<!-- END Hidden Required Fields -->
 
 						
-						<input type="text" name="Сайт" placeholder="Какой адрес вашего сайта?" required class="input_url"><div class="toggle_inputs button_clac">[ Клац ]</div>
+						<input type="text" name="Сайт" placeholder="Какой адрес вашего сайта?" required class="input_url"><div class="toggle_inputs button_clac cl-effect-1">Клац</div>
 						
 						<div class="hidden_inputs">
 
 							<input type="email" name="E-mail" placeholder="* E-mail" required><input type="text" name="Имя" placeholder="Имя"><input type="tel" name="Телефон" placeholder="Телефон"><input type="text" name="Бюджет/мес" placeholder="* Бюджет/мес" required>
 							<!--noindex-->
-							<div class="budget_desc">Пожалуйста, напишите, какой ежемесячный бюджет вы рассчитываете выделять на продвижение сайта? Это позволит выбрать оптимальную стратегию именно для вас. Бюджет должен быть <u>не менее 8 тыс.</u></div>
+							<div class="budget_desc"><b>Вы на пути к успеху!</b></div>
+							<div class="budget_desc">Пожалуйста, укажите ежемесячный бюджет, который вы рассчитываете выделять на продвижение сайта. Это позволит выбрать оптимальную стратегию именно для вас. Бюджет должен быть <u>не менее 8 тыс.</u></div>
 							<!--/noindex-->
-							<button class="button_calc" type="submit">Получить консультацию</button>
+							<button class="button_calc cl-effect-1" type="submit">Отправить</button>
 						</div>
-						<a href="#" class="no_site">Ещё нет сайта? Оцените наши.</a>
+						<!-- <a href="#" class="no_site">Ещё нет сайта? Оцените наши.</a> -->
 						<!-- <a href="#" class="no_site">Ещё нет сайта? Мы поможем!</a> -->
 					</form>
 					<!-- <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. За курсивных однажды, выйти.</p> -->
-					<p>Делаю правильное продвижение сайтов по Белгороду и всей России. Использую технологии продвижения 2016 года и опыт.</p>
+					<p>Я помогу вам продвинуть ваш сайт и найти новых клиентов. Всё это делается с помощью SEO продвижения и контекстной рекламы.</p>
+					<!-- <p>Делаю продвижение сайтов по Белгороду и всей России. Использую технологии продвижения 2016 года и опыт с 2012 года.</p> -->
 				</div>
 			</div>
 		</div>
 	</div>
 </header>
+
+
+<!--##############################
+seo_vs_ad -->
+<section class="seo_vs_ad light">
+	<div class="container">
+		<div class="mu_container">
+			<h2>Что лучше, SEO продвижение или контекстная реклама?</h2>
+			<p>Для начала нужно понять, что <b>это дополняющие друг-друга инструменты</b> по привлечению клиентов. SEO является долгосрочным вложением с долгой отдачей, а контекстная реклама, мощным но краткосрочным, из за необходимости постоянных вложений.</p>
+			
+			<h3>Идеальная стратегия продвижения</h3>
+			<ol>
+				<li>Хороший дизайн и контент сайта</li>
+				<li>Запуск контекстной рекламы</li>
+				<li>SEO продвижение</li>
+			</ol>
+			<p>Если внешний вид и содержимое сайта не отталкивают посетителей, сразу запустить рекламу, она начнёт приводить клиентов в то время, как будут проводится работы по SEO. Эти работы длятся от трёх до восьми месяцев. Зависит это от конкуренции в вашей сфере и продвигаемых поисковых запросов.</p>
+			<p>По окончанию, SEO продвижения, выйдя в ТОП, сайт долгое время остается там и приводит клиентов. После этого вы уже решаете, останавливать рекламу или продолжать вкладываться в неё.</p>
+			
+			<p><b>Не забывайте, что отдача от SEO долгая, но не вечная.</b></p>
+		</div>
+	</div>
+</section>
 
 
 <!--##############################
@@ -190,12 +218,12 @@ results -->
 								</div>
 							</div>
 						</span>
-						<p>Рост визитов, на <span class="percent"><b>79,3%</b></span> за <b>4</b> месяца.</p>
+						<p class="p_accent">Рост визитов, на <span class="percent"><b>+79,3%</b></span> за 4 месяца.</p>
 						<div class="h_posit">Позиции сайта в ходе продвижения</div>
 						<div id="chart_div_0"></div>
 						<div class="h_posit">Кол-во визитов на сайте</div>
 						<div id="chart_div_0_1"></div>
-						<p class="total">Компания была перегружена от большого потока новых клиентов, но в целом справилась.</p>
+						<p class="total">В один из моментов, компания была перегружена от большого потока новых клиентов, но в целом справилась.</p>
 				</div>
 			</div>
 
@@ -212,7 +240,7 @@ results -->
 								</div>
 							</div>
 						</span>
-						<p>Рост визитов, на <span class="percent"><b>94,2%</b></span> за <b>8</b> месяцев.</p>
+						<p class="p_accent">Рост визитов, на <span class="percent"><b>+94,2%</b></span> за 8 месяцев.</p>
 						<div class="h_posit">Позиции сайта в ходе продвижения</div>
 						<div id="chart_div_1"></div>
 						<div class="h_posit">Кол-во визитов на сайте</div>
@@ -234,7 +262,7 @@ results -->
 								</div>
 							</div>
 						</span>
-						<p>Рост визитов, на <span class="percent"><b>61,7%</b></span> за <b>8</b> месяцев.</p>
+						<p class="p_accent">Рост визитов, на <span class="percent"><b>+61,7%</b></span> за 8 месяцев.</p>
 						<div class="h_posit">Позиции сайта в ходе продвижения</div>
 						<div id="chart_div_2"></div>
 						<div class="h_posit">Кол-во визитов на сайте</div>
@@ -254,7 +282,7 @@ guarantees -->
 <section class="guarantees light" id="guarantees">
 	<div class="container">
 		<h2><i class="icon-shield"></i> Гарантии</h2>
-		<div class="h2_desc">Самая лучшая гарантия — это высокие позиции моих клиентов. Проверьте сами.</div>
+		<div class="h2_desc">Самая лучшая гарантия — это высокие позиции моих клиентов.</div>
 		<div class="row">
 			<div class="col-md-4">
 				<div class="guarantee">
@@ -264,12 +292,13 @@ guarantees -->
 								<div class="tr">
 									<div class="td">
 										<div class="header">Схема - Сервис</div>
-										<div class="desc"><a href="http://shema-servis.ru" target="_blank">shema-servis.ru</a></div>
+										<div class="desc">shema-servis.ru</div>
 									</div>
 								</div>
 							</div>
 						</span>
-					<a class="search_result" target="_blank" href="https://yandex.ru/yandsearch?numdoc=10&p=0&lr=4&text=%D1%80%D0%B5%D0%BC%D0%BE%D0%BD%D1%82%20%D1%82%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D0%BE%D0%B2%20%D0%B1%D0%B5%D0%BB%D0%B3%D0%BE%D1%80%D0%BE%D0%B4">Поиск: «Ремонт телефонов Белгород»</a>
+						<div class="h_search">Искать в Яндекс:</div>
+					<a class="search_result" target="_blank" href="https://yandex.ru/yandsearch?numdoc=10&p=0&lr=4&text=%D1%80%D0%B5%D0%BC%D0%BE%D0%BD%D1%82%20%D1%82%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D0%BE%D0%B2%20%D0%B1%D0%B5%D0%BB%D0%B3%D0%BE%D1%80%D0%BE%D0%B4">«Ремонт телефонов Белгород»</a>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -280,12 +309,13 @@ guarantees -->
 								<div class="tr">
 									<div class="td">
 										<div class="header">Сладкие идеи</div>
-										<div class="desc"><a href="http://the-sweet.ru" target="_blank">the-sweet.ru</a></div>
+										<div class="desc">the-sweet.ru</div>
 									</div>
 								</div>
 							</div>
 						</span>
-					<a class="search_result" target="_blank" href="https://yandex.ru/yandsearch?numdoc=10&p=0&lr=4&text=%D1%82%D0%BE%D1%80%D1%82%D1%8B%20%D0%BD%D0%B0%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%20%D0%B1%D0%B5%D0%BB%D0%B3%D0%BE%D1%80%D0%BE%D0%B4">Поиск: «Торты на заказ Белгород»</a>
+						<div class="h_search">Искать в Яндекс:</div>
+					<a class="search_result" target="_blank" href="https://yandex.ru/yandsearch?numdoc=10&p=0&lr=4&text=%D1%82%D0%BE%D1%80%D1%82%D1%8B%20%D0%BD%D0%B0%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%20%D0%B1%D0%B5%D0%BB%D0%B3%D0%BE%D1%80%D0%BE%D0%B4">«Торты на заказ Белгород»</a>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -296,12 +326,13 @@ guarantees -->
 								<div class="tr">
 									<div class="td">
 										<div class="header">ООО АгроКолёса Белогорья</div>
-										<div class="desc"><a href="http://agro-wheel.ru" target="_blank">agro-wheel.ru</a></div>
+										<div class="desc">agro-wheel.ru</div>
 									</div>
 								</div>
 							</div>
 						</span>
-					<a class="search_result" target="_blank" href="https://yandex.ru/yandsearch?numdoc=10&p=0&lr=225&text=%D0%BA%D0%BE%D0%BB%D1%91%D1%81%D0%B0%20%D0%B4%D0%BB%D1%8F%20%D1%82%D1%80%D0%B0%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Поиск: «Колёса на трактор»</a>
+						<div class="h_search">Искать в Яндекс:</div>
+					<a class="search_result" target="_blank" href="https://yandex.ru/yandsearch?numdoc=10&p=0&lr=225&text=%D0%BA%D0%BE%D0%BB%D1%91%D1%81%D0%B0%20%D0%B4%D0%BB%D1%8F%20%D1%82%D1%80%D0%B0%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">«Колёса на трактор»</a>
 				</div>
 			</div>
 		</div>
@@ -318,13 +349,15 @@ services -->
 		<div class="row">
 			<div class="col-md-6">
 				<div class="service">
-					<h3>Продвижение сайта</h3>
+					<h3><i class="icon-chart-line"></i>Продвижение сайта</h3>
+					<!-- <div class="image_container"></div> -->
 					<p>SEO продвижение, выгодно в долгосрочном периоде и является крепким фундаментом в развитии вашего сайта и бизнеса.</p>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="service">
-					<h3>Контекстная реклама</h3>
+					<h3><i class="icon-megaphone"></i>Контекстная реклама</h3>
+					<!-- <div class="image_container"></div> -->
 					<p>Реклама — мощное средство, но часто имеет временный характер, из-за необходимости постоянных вложений. Не стоит полагаться только на неё.</p>
 				</div>
 			</div>
@@ -343,6 +376,7 @@ contacts -->
 		<ul>
 			<li>Меня зовут Алексей</li>
 			<li>Мне 26</li>
+			<li>г. Белгород</li>
 		</ul>
 		<div class="row">
 			<div class="col-md-4">
