--- a/app/index.html
+++ b/app/index.html
@@ -14,30 +14,15 @@
 
 <head>
 
-	<!-- Google Analytics Content Experiment code -->
-	<script>function utmx_section(){}function utmx(){}(function(){var
-	k='118849039-2',d=document,l=d.location,c=d.cookie;
-	if(l.search.indexOf('utm_expid='+k)>0)return;
-	function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
-	indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
-	length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
-	'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
-	'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
-	'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
-	valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-	'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-	</script><script>utmx('url','A/B');</script>
-	<!-- End of Google Analytics Content Experiment code -->
-
 	
 	<meta charset="utf-8">
+	<meta name='yandex-verification' content='76f5851596b66c09' />
 
 	<title>Landing2Top - Продвижение сайта. Белгород</title>
 	<meta name="description" content="Гарантированное продвижение сайтов в Белгороде и в России. Вы сами устанавливаете бюджет на продвижение сайта.">
-
+	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 	<meta property="og:image" content="/img/favicon/android-icon-192x192.png">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
@@ -49,6 +34,8 @@
 	<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
+	<link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
 	<link rel="icon" type="image/png" sizes="192x192"  href="/img/favicon/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
@@ -86,7 +73,9 @@
 	<noscript>
 		<link rel="stylesheet" href="css/fonts.min.css">
 		<link rel="stylesheet" href="css/main.min.css">
-	</noscript></head>
+	</noscript>
+
+</head>
 
 <body>
 
@@ -187,7 +176,10 @@ header -->
 						
 						<div class="hidden_inputs">
 
-							<input type="email" name="E-mail" placeholder="* E-mail" required><input type="text" name="Имя" placeholder="Имя"><input type="tel" name="Телефон" placeholder="Телефон"><input type="text" name="Бюджет/мес" placeholder="* Бюджет/мес" required>
+							<input type="email" name="E-mail" placeholder="* E-mail" required>
+							<input type="text" name="Имя" placeholder="Имя">
+							<input type="tel" name="Телефон" placeholder="Телефон">
+							<input type="text" name="Бюджет/мес" placeholder="* Бюджет/мес" required>
 							<!--noindex-->
 							<div class="budget_desc"><b>Вы на пути к успеху!</b></div>
 							<div class="budget_desc">Пожалуйста, укажите ежемесячный бюджет, который вы рассчитываете выделять на продвижение сайта. Это позволит выбрать оптимальную стратегию именно для вас.</div>
@@ -362,7 +354,7 @@ guarantees -->
 							</div>
 						</span>
 						<div class="h_search">Искать в Яндекс:</div>
-					<a class="search_result" target="_blank" href="https://yandex.ru/yandsearch?numdoc=10&p=0&lr=225&text=%D0%BA%D0%BE%D0%BB%D1%91%D1%81%D0%B0%20%D0%B4%D0%BB%D1%8F%20%D1%82%D1%80%D0%B0%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">«Колёса на трактор»</a>
+					<a class="search_result" target="_blank" href="https://yandex.ru/search/?msid=1463012581.74784.22879.8112&text=колёса%20для%20тракторов&suggest_reqid=736710979146301258125880163496938">«Колёса для тракторов»</a>
 				</div>
 			</div>
 		</div>
@@ -379,7 +371,7 @@ contacts -->
 		<ul>
 			<li><a href="tel:+79102200224" class="mobile_phone">8-910-220-0224</a> Алексей</li>
 			<li><a href="mailto:info@landing2top.ru" class="email"><i class="icon-mail"></i> info@landing2top.ru</a></li>
-			<li><a href="https://vk.com/club113520320"><i class="icon-vkontakte"></i> Группа</a></li>
+			<li><a target="_blank" href="https://vk.com/club113520320"><i class="icon-vkontakte"></i> Группа</a></li>
 		</ul>
 	</div>
 </section>
